# MultiRobot_Drones

./: CMakeLists.txt  README.md  crazyflies_mrs.yaml  land_all.sh  package.xml
bag/: bag.sh
bag/rosbag2_2025_02_06-11_06_54/: metadata.yaml  rosbag2_2025_02_06-11_06_54_0.mcap
bag/rosbag2_2025_02_06-11_28_48/: metadata.yaml
bag/rosbag2_2025_02_06-11_35_59/: metadata.yaml  rosbag2_2025_02_06-11_35_59_0.mcap
bag/rosbag2_2025_02_06-11_46_39/: metadata.yaml  rosbag2_2025_02_06-11_46_39_0.mcap
bag/rosbag2_2025_02_06-11_48_02/: metadata.yaml  rosbag2_2025_02_06-11_48_02_0.mcap
bag/rosbag2_2025_02_06-11_52_35/: metadata.yaml  rosbag2_2025_02_06-11_52_35_0.mcap
bag/rosbag2_2025_02_06-11_55_28/: metadata.yaml  rosbag2_2025_02_06-11_55_28_0.mcap
bag/rosbag2_2025_02_06-11_57_21/: metadata.yaml  rosbag2_2025_02_06-11_57_21_0.mcap
bag/rosbag2_2025_02_06-12_02_22/: metadata.yaml  rosbag2_2025_02_06-12_02_22_0.mcap
bag/rosbag2_2025_02_06-12_03_15/: metadata.yaml
bag/rosbag2_2025_02_06-12_07_59/: metadata.yaml  rosbag2_2025_02_06-12_07_59_0.mcap
bag/rosbag2_2025_02_06-12_14_19/: metadata.yaml  rosbag2_2025_02_06-12_14_19_0.mcap
bag/rosbag2_2025_02_06-12_16_12/: rosbag2_2025_02_06-12_16_12_0.mcap
ctrl/: demo_formation.sh  demo_navigation.sh  demo_rendezvous.sh  drop.sh  land_all.sh  velmux.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lib/reynold_rules/: reynold_rules_node
install/share/reynold_rules/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/reynold_rules/launch/: reynold_rules.launch.py
log/: latest_build
reynold_rules/: .clang-format  CMakeLists.txt  package.xml
reynold_rules/config/: params.yaml  params_rendezvous.yaml
reynold_rules/include/reynold_rules/: reynold_rules_node.hpp
reynold_rules/launch/: reynold_rules.launch.py
reynold_rules/src/: reynold_rules_class.cpp  reynold_rules_node.cpp
reynold_rules/src/reynold_rules/: cosas.cpp  reynold_rules_node.cpp
reynold_rules_interface/reynold_rules_interfaces/: CMakeLists.txt  package.xml
visualization/: config.rviz  session.yml  start.sh
