<?xml version="1.0"?>
<package format="3">
  <name>reynold_rules</name>
  <version>0.0.0</version>
  <description>Use msg</description>
  <maintainer email="r.bartolome.2022@alumnos.urjc.es">rui</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_msg</depend>
  <depend>geometry_msgs</depend>
  <depend>reynold_rules_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
